[FIX] hr_contract_salary: Fix layout issues form BS4 migration
Purpose
=======

The xml has been adapted correctly, but not all the css rules

--- a/hr_contract_salary/static/src/scss/hr_contract_salary.scss
+++ b/hr_contract_salary/static/src/scss/hr_contract_salary.scss
@@ -67,10 +67,11 @@
                 cursor: default;
                 text-align: right;
             }
-            .input-group .form-control[disabled] + .input-group-addon {
-                padding: 0 0 0 5px;
-                border: 0;
-                background-color: transparent;
+            .input-group .form-control[disabled] + .input-group-append {
+                .input-group-text {
+                    border: none;
+                    background-color: transparent;
+                }
             }
         }
 
